@@ -15,6 +15,8 @@ Enhancements:
     already belong to another created group.
   - in emaj_hist table, add a column containing the id of the insertion 
     transaction. 
+  - a new emaj_find_previous_mark_group() function returns the name of the 
+    mark that immediately precedes a given date and time for a group.
 
 Bug fixes:
   - during emaj_start_group() avoid double lock of tables and reoder events
